<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.main.MainActivity"
    android:background="@color/blue_50">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_mxlarge"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="12dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/spacing_medium">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/spacing_middle">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_mxlarge"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xxlarge"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_fullname"
                    style="@style/EditTextStyle.BgWhite"
                    android:layout_marginBottom="@dimen/spacing_xmedium"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:hint="@string/fullname_hint"
                    app:drawableTint="@color/chocolate"
                    app:tint="@color/chocolate" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_email"
                    style="@style/EditTextStyle.BgWhite"
                    android:layout_marginBottom="@dimen/spacing_xmedium"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:hint="@string/email_hint"
                    app:drawableTint="@color/chocolate"
                    app:tint="@color/chocolate" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-14dp"
                    app:errorEnabled="true"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/chocolate">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_password"
                        style="@style/EditTextStyle.BgWhite"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="20dp"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        app:drawableTint="@color/chocolate"
                        app:tint="@color/chocolate" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_phone"
                    style="@style/EditTextStyle.BgWhite"
                    android:layout_marginBottom="@dimen/spacing_xmedium"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:hint="@string/phone_hint"
                    android:inputType="phone"
                    android:maxLength="14"
                    app:drawableTint="@color/chocolate"
                    app:tint="@color/chocolate" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:layout_marginBottom="@dimen/spacing_middle"
                    android:orientation="vertical">
                    <TextView
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:layout_marginTop="5dp"
                        android:textSize="13sp"/>

                    <Spinner
                        android:id="@+id/sp_gender"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:textSize="13sp"
                        style="@style/Widget.AppCompat.DropDownItem.Spinner"
                        android:entries="@array/gender_list"
                        android:layout_marginBottom="@dimen/spacing_small"/>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:layout_weight="1"
                    android:background="@drawable/button_chocolate"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>